--- a/index.html
+++ b/index.html
@@ -1,35 +1,45 @@
+<!DOCTYPE html>
 <html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="main.css" rel="stylesheet" type="text/css" media="screen" />
-</head>
-<body>
-<h1>Emergency Questions!</h1>
-<p id="cat-fact">Click the button below to view a random emergency question!</p>
-<button id="show-fact">Show a new emergency question</button>
-  
-  <script>
-  var factPlaceholder = document.getElementById("cat-fact");
-var showFact = document.getElementById("show-fact");
+    <head>
+        <!--META information-->
+        <meta charset="UTF-8">
+        <meta name="description" content="Random Quote Generator">
+        <meta name="keywords" content="HTML,CSS,JavaScript, Quotes, API">
+        <meta name="author" content="Neha Soni">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!--End of META information-->
 
-/* Facts from this API: https://fact.birb.pw/api/v1/cat */
+        <title>Random Quote Generator</title>
 
-var CatFacts = ["The ancient Egyptians were the first to tame the cat (in about 3000 BC), and used them to control pests.",
-               "Cats share 95.6% of their DNA with tigers.",
-               "Cats are asleep for 70% of their lives.",
-               "Cat kidneys are super efficient, they can rehydrate by drinking seawater.",
-               "Kittens who are taken along on short, trouble-free car trips to town tend to make good passengers when they get older. They get used to the sounds and motions of traveling and make less connection between the car and the visits to the vet."]
+        <!--LINK CUSTOM CSS FILE-->
+        <link rel="stylesheet" href="style.css">
 
-var factNumber;
+        <!--FONTAWESOME CDN-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+    </head>
+    <body>
+        <!-- Quote Container -->
+        <div class="container">
+             <!-- Quote to be Displayed Here -->
+            <h1>
+            <i class="fas fa-quote-left"></i>
+            <span class="quote" id="quote"></span>
+            <i class="fas fa-quote-right"></i>
+            </h1>
+            <!-- Author to be Displayed Here -->
+            <p class="author" id="author"></p>
 
-function randomFact(){
-  return CatFacts[factNumber];
-}
+            <hr/>
+            <div class="buttons">
+               <!--Button to tweet the quote -->
+                <a class="twitter" id="tweet" href="https://twitter.com/intent/tweet?text=Greetings" data-size="large" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
 
-showFact.addEventListener('click', function(){
-  factNumber = Math.floor(Math.random()*5);
-  factPlaceholder.textContent = randomFact();
-});
-</script>
-</body>
+                <!--Add an onclick event on 'next quote' button. Upon the click of a button, a new random quote is generated-->
+                <button class="next" onclick="getNewQuote()">Next quote</button>
+            </div>
+        </div>
+
+        <!--LINK CUSTOM JS FILE-->
+        <script src="script.js"></script>
+    </body>
 </html>
