--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
        </head>
     <body>
+        <h1>Emergency question generator</h1>
      <div id="quoteDisplay">
          <!-- questions will display here -->
          
