--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
          <!-- questions will display here -->
          
         </div>
-<button onclick="newquote()">New emergency question</button>
+<button onclick="newQuote()">New emergency question</button>
         
         <!--LINK CUSTOM JS FILE-->
         <script src="script.js"></script>
