--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
 <button onclick="newQuote()">New emergency question</button>
         
         <!--LINK CUSTOM JS FILE-->
-        <script src="script.js"></script>
+        <script src="javascript.js"></script>
     </body>
 </html>
