--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <h1>Emergency question generator</h1>
      <div id="quoteDisplay">
-         <!-- questions will display here -->
+        :) <!-- questions will display here -->
         </div>
         <button onclick="newQuote()">New emergency question</button>
         
