--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <div id="quoteDisplay">
         <!-- questions will display here -->
         </div>
-        <button onclick="newQuote()">New emergency question</button>
+        <button onclick="newQuote()">New Quote</button>
         
         <script src="javascript.js"></script>
     </body>
