--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
         <title>Random Quote Generator</title>
        </head>
     <body>
-        <h1>Emergency question generator</h1>
-     <div id="quoteDisplay">
-        <!-- questions will display here -->
-        </div>
-        <button onclick="newQuote()">New Quote</button>
+<blockquote>
+<i id = "quotes">"I have far more respect for the person with a single idea who gets there than one with a thousand ideas and does nothing." -Thomas Edison</i>
+</blockquote>
+<a onclick="newQuote()">Next quote</a>
+
         
         <script src="javascript.js"></script>
     </body>
