--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <a onclick="newQuote()">Next quote</a>
 
         
-        <script src="javascript.js"></script>
+        <script src="quotes.js"></script>
     </body>
 </html>
