--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <blockquote>
 <i id = "quotes">"I have far more respect for the person with a single idea who gets there than one with a thousand ideas and does nothing." -Thomas Edison</i>
 </blockquote>
-<a onclick="newQuote()">Next quote</a>
+<button onclick="newQuote()">Next quote</button>
 
         
         <script src="quotes.js"></script>
