--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 <i id = "quotes">"I have far more respect for the person with a single idea who gets there than one with a thousand ideas and does nothing." -Thomas Edison</i>
 </blockquote>
 <button onclick="newQuote()">Next quote</button>
+        
+        <select name="cars" id="cars">
+  <option onclick="newQuote()">Volvo</option>
+  <option onclick="newQuote()">Saab</option>
+  <option onclick="newQuote()">Mercedes</option>
+  <option onclick="newQuote()">Audi</option>
+</select>
 
         
         <script src="quotes.js"></script>
