--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>    
-        <title>Random Quote Generator</title>
+        <title>Avoid the akward silence</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        </head>
     <body>
 <blockquote>
