--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
        </head>
     <body>
+        <div id="body" width="50%">
 <blockquote>
 <i id = "quotes">"I have far more respect for the person with a single idea who gets there than one with a thousand ideas and does nothing." -Thomas Edison</i>
 </blockquote>
         <button onclick="newQuote()">Next quote</button>
+        </div>
         
         <script src="quotes.js"></script>
     </body>
