--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
     <head>    
         <title>Avoid the akward silence</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
        </head>
     <body>
-        <div id="body" width="50%" border="1px">
+        <div class="header">
+  <h1>Header</h1>
+</div>
+
+<div class="menu">
+  <ul>
+    <li>Home</li>
+    <li>Nav 2</li>
+    <li>Nav 3</li>
+    <li>Nav 4</li>
+  </ul>
+</div>
+
+<div class="main">
 <blockquote>
 <i id = "quotes">"I have far more respect for the person with a single idea who gets there than one with a thousand ideas and does nothing." -Thomas Edison</i>
 </blockquote>
