--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <blockquote>
 <i id = "quotes">"I have far more respect for the person with a single idea who gets there than one with a thousand ideas and does nothing." -Thomas Edison</i>
 </blockquote>
-        <button onclick="newQuote()">Next quote</button>
+        <button class="button button1" onclick="newQuote()">Next quote</button>
         </div>
         
         <script src="quotes.js"></script>
