--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 <div class="menu">
   <ul>
-    <li>Home</li>
-    <li>Nav 2</li>
-    <li>Nav 3</li>
-    <li>Nav 4</li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="#">Nav 2</a></li>
+      <li><a href="#">Nav 3</a></li>
+      <li><a href="#">Nav 4</a></li>
   </ul>
 </div>
 
