--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 </div>
 
 <div class="main">
-<blockquote>
+<div>
 <i id = "quotes">"I have far more respect for the person with a single idea who gets there than one with a thousand ideas and does nothing." -Thomas Edison</i>
-</blockquote>
+        </div>
         <button class="button button1" onclick="newQuote()">Next quote</button>
         </div>
         
