--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <div class="menu">
   <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="#">Nav 2</a></li>
+      <li><a href="index.html">Questions</a></li>
+      <li><a href="quotes.html">Quotes</a></li>
       <li><a href="#">Nav 3</a></li>
       <li><a href="#">Nav 4</a></li>
   </ul>
