--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 
 <div class="main">
 <div>
-<i id = "quotes">"I have far more respect for the person with a single idea who gets there than one with a thousand ideas and does nothing." -Thomas Edison</i>
+<i id = "questions">What?</i>
         </div>
-        <button class="button button1" onclick="newQuote()">Next quote</button>
+        <button class="button button1" onclick="newQuestion()">Next question</button>
         </div>
         
-        <script src="quotes.js"></script>
+        <script src="questions.js"></script>
     </body>
 </html>
