--- a/quotes.html
+++ b/quotes.html
@@ -23,6 +23,7 @@
 <div>
 <i id = "quotes">"I have far more respect for the person with a single idea who gets there than one with a thousand ideas and does nothing." -Thomas Edison</i>
         </div>
+    <p>&nbsp;</p>
         <button class="button button1" onclick="newQuote()">Next quote</button>
         </div>
         
