--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="menu">
   <ul>
       <li><a href="index.html">Questions</a></li>
-      <li><a href="quotes.html">Quotes</a></li>
+      <li><a href="#">Quotes</a></li>
       <li><a href="#">Nav 3</a></li>
       <li><a href="#">Nav 4</a></li>
   </ul>
@@ -21,11 +21,11 @@
 
 <div class="main">
 <div>
-<i id = "questions">What?</i>
+<i id = "quotes">What?</i>
         </div>
-        <button class="button button1" onclick="newQuestion()">Next question</button>
+        <button class="button button1" onclick="newQuotes()">Next question</button>
         </div>
         
-        <script src="questions.js"></script>
+        <script src="quotes.js"></script>
     </body>
 </html>
