--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="menu">
   <ul>
       <li><a href="index.html">Questions</a></li>
-      <li><a href="#">Quotes</a></li>
+      <li><a href="#">Nav 1</a></li>
       <li><a href="#">Nav 3</a></li>
       <li><a href="#">Nav 4</a></li>
   </ul>
