--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <div>
 <i id = "quotes">What?</i>
         </div>
+    <p>&nbsp;</p>
         <button class="button button1" onclick="newQuotes()">Next question</button>
         </div>
         
