--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <i id = "quotes">What?</i>
         </div>
     <p>&nbsp;</p>
-        <button class="button button1" onclick="newQuotes()">Next question</button>
+        <button class="button button1" onclick="newQuote()">Next question</button>
         </div>
         
         <script src="quotes.js"></script>
