--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         <button class="button button1" onclick="newQuote()">Next question</button>
         </div>
         
+         <div class="footer">
+  <h1>Footer</h1>
+</div>
+        
         <script src="quotes.js"></script>
     </body>
 </html>
