--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         
          <div class="footer">
   <h1>Footer</h1>
-             <p> class="info">&Copy; 2021</p>
+             <p class="info">&Copy; 2021</p>
 </div>
         
         <script src="quotes.js"></script>
