--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 <div>
 <i id = "quotes">What?</i>
         </div>
-    <p>&nbsp;</p>
+    </div>
+        <div class="main bottom ">
         <button class="button button1" onclick="newQuote()">Next question</button>
         </div>
         
