--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <body onload="newQuote()">
         <div class="header">
   <h1>Header</h1>
+            <span id="logo"><img src="https://via.placeholder.com/150"></span>
+
+C/O https://placeholder.com/
 </div>
 
 <div class="menu">
