--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
        </head>
     <body onload="newQuote()">
-        <div class="header">
+<!--        <div class="header">
   <h1>Header</h1>
             <span id="logo"><img src="https://via.placeholder.com/150"></span>
 
@@ -33,6 +33,15 @@ C/O https://placeholder.com/
          <div class="footer">
   <h1>Footer</h1>
              <p class="info">&copy; 7HillsDesign 2021</p>
+</div>
+        -->
+        
+        <div class="grid-container">
+  <div class="item1">Header</div>
+  <div class="item2">Menu</div>
+  <div class="item3">Main</div>  
+  <div class="item4">Right</div>
+  <div class="item5">Footer</div>
 </div>
         
         <script src="quotes.js"></script>
