--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@ C/O https://placeholder.com/
   <div class="item1">Header</div>
   <div class="item2">Menu</div>
   <div class="item3">Main</div>  
-  <div class="item4">Right</div>
+  
+  <div class="item4">
+     <button class="button button1" onclick="newQuote()">Next question</button>
+  </div>
             
   <div class="item5">
       <h1>Footer</h1>
