--- a/index.html
+++ b/index.html
@@ -37,16 +37,29 @@ C/O https://placeholder.com/
         -->
         
  <div class="grid-container">
-  <div class="item1">Header</div>
-  <div class="item2">Menu</div>
-  <div class="item3">Main</div>  
+  <div class="item1">
+     <h1>Header</h1>
+     <span id="logo"><img src="https://via.placeholder.com/150"></span>
+  </div>
+  
+  <div class="item2">
+      <ul>
+      <li><a href="index.html">Questions</a></li>
+      <li><a href="#">Nav 1</a></li>
+      <li><a href="#">Nav 3</a></li>
+      <li><a href="#">Nav 4</a></li>
+      </ul>
+  </div>
+  
+  <div class="item3">
+     <i id = "quotes">What?</i>
+  </div>  
   
   <div class="item4">
      <button class="button button1" onclick="newQuote()">Next question</button>
   </div>
             
   <div class="item5">
-      <h1>Footer</h1>
       <p class="info">&copy; 7HillsDesign 2021</p>
   </div>
 </div>
