--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ C/O https://placeholder.com/
     <div>
 <i id = "quotes">What?</i>
     </div>
-        
+        <div>
         <button class="button button1" onclick="newQuote()">Next question</button>
         </div>
   </div>
