--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@ C/O https://placeholder.com/
   </div>
 
   <div class="col-9">
-    <h1>The City</h1>
-    <p>Chania is the capital of the Chania region on the island of Crete. The city can be divided in two parts, the old town and the modern city.</p>
-    <p>Resize the browser window to see how the content respond to the resizing.</p>
+    <p><i id="quotes">What?</i></p>
+    <p><button class="button button1" onclick="newQuote()">Next question</button></p>
   </div>
 </div>
 <div class="footer">
