--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ C/O https://placeholder.com/
         
 <div class="header">
   <h1>Chania</h1>
+  <span id="logo"><img src="https://via.placeholder.com/150"></span>
 </div>
 
 <div class="row">
