--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!--HEADER-->
 <div class="header">
   <h1>Header</h1>
-            <span id="logo"><img src="https://via.placeholder.com/150"></span>
+  <span id="logo"><img src="https://via.placeholder.com/150"></span>
 </div>
 <!--HEADER END-->
         
@@ -24,8 +24,8 @@
       <li><a href="#">Nav 3</a></li>
       <li><a href="#">Nav 4</a></li>
   </ul></div>
-  <div class="column middle" style="background-color:#bbb;"><i id = "quotes">What?</i></div>
-  <div class="column side" style="background-color:#ccc;"><button class="button button1" onclick="newQuote()">Next question</button></div>
+  <div class="column middle" style="background-color:#fff;"><i id = "quotes">What?</i></div>
+  <div class="column side" style="background-color:#fff;"><button class="button button1" onclick="newQuote()">Next question</button></div>
 </div>
 
 <!--MAIN END-->
