--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
 <div class="row">
   <div class="column side" style="background-color:#aaa;"><ul>
-      <li><a href="index.html">Questions</a></li>
-      <li><a href="#">Nav 1</a></li>
-      <li><a href="#">Nav 3</a></li>
+      <li><a href="index.html">Emergency questions</a></li>
+      <li><a href="#">Getting to know you</a></li>
+      <li><a href="#">Would you rather</a></li>
       <li><a href="#">Nav 4</a></li>
   </ul></div>
   <div class="column middle" style="background-color:#fff;"><i id = "quotes">What?</i></div>
