--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   
 <!--HEADER-->
 <div class="header">
-  <h1>Header</h1>
-  <span id="logo"><img src="https://via.placeholder.com/150"></span>
+ 
+  <span id="logo"><img src="Luv2meetU-logo-300x286.png"></span>
 </div>
 <!--HEADER END-->
         
