--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!--HEADER-->
 <div class="header">
  
-  <span id="logo"><img src="Luv2meetU-logo-300x286.png" width="50%" height="50%"></span>
+  <span id="logo"><img src="Luv2meetU-logo-300x286.png" width="175px" ></span>
 </div>
 <!--HEADER END-->
         
