--- a/index2.html
+++ b/index2.html
@@ -8,10 +8,10 @@
   
   <style>
 .accordion {
-  background-color: #eee;
+  background-color: #ccc;
   color: #444;
   cursor: pointer;
-  padding: 18px;
+  padding: 10px;
   width: 100%;
   border: none;
   text-align: left;
