--- a/index2.html
+++ b/index2.html
@@ -8,10 +8,10 @@
   
   <style>
 .accordion {
-  background-color: #ccc;
+  background-color: #eee;
   color: #444;
   cursor: pointer;
-  padding: 10px;
+  padding: 18px;
   width: 100%;
   border: none;
   text-align: left;
@@ -21,14 +21,27 @@
 }
 
 .active, .accordion:hover {
-  background-color: #ccc; 
+  background-color: #ccc;
+}
+
+.accordion:after {
+  content: '\002B';
+  color: #777;
+  font-weight: bold;
+  float: right;
+  margin-left: 5px;
+}
+
+.active:after {
+  content: "\2212";
 }
 
 .panel {
   padding: 0 18px;
-  display: none;
   background-color: white;
+  max-height: 0;
   overflow: hidden;
+  transition: max-height 0.2s ease-out;
 }
   </style>
   
