--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
   
   <style>
 .accordion {
-  background-color: #eee;
+  background-color: #ccc;
   color: #444;
   cursor: pointer;
   padding: 18px;
