--- a/index2.html
+++ b/index2.html
@@ -66,7 +66,7 @@
 	
 <button class="accordion">Questions</button>
 <div class="panel">
-   <p><a href="#">Dating</a></p>
+	<ul><li><a href="#">Dating</a></li></ul>
    <p><a href="#">Conversation</a></p>
    <p><a href="#">Would you rather</a></p></div>
 
