--- a/index2.html
+++ b/index2.html
@@ -38,7 +38,7 @@
 
 .panel {
   padding: 0 8px;
-  background-color: white;
+  background-color: #cccccc;
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
@@ -66,9 +66,10 @@
 	
 <button class="accordion">Questions</button>
 <div class="panel">
-	<ul><li><a href="#">Dating</a></li></ul>
-   <p><a href="#">Conversation</a></p>
-   <p><a href="#">Would you rather</a></p></div>
+   <ul><li><a href="#">Dating</a></li>
+   <li><a href="#">Conversation</a></li>
+   <li><a href="#">Would you rather</a></li></ul>
+</div>
 
 <button class="accordion">Section 2</button>
 <div class="panel">
@@ -100,7 +101,13 @@ for (i = 0; i < acc.length; i++) {
 	
   
   </div>
-  <div class="column middle" style="background-color:#fff;"><i id = "quotes">What?</i></div>
+  <div class="column middle" style="background-color:#fff;">
+	  <h1>Header</h1>
+	  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim 
+             veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
+	     velit esse cillum dolore eu fugiat nulla pariatur.</p>
+	  
+	  <i id = "quotes">What?</i></div>
   <div class="column side" style="background-color:#fff;"><button class="button button1" onclick="newQuote()">Next question</button></div>
 </div>
 
