--- a/index2.html
+++ b/index2.html
@@ -73,11 +73,11 @@
 
 <button class="accordion">Section 2</button>
 <div class="panel">
- <p><a href="#">Nav</a></p></div>
+	<ul><li><a href="#">Nav</a></li></ul></div>
 
 <button class="accordion">Section 3</button>
 <div class="panel">
-	<p><a href="#">Nav</a></p>
+	<ul><li><a href="#">Nav</a></li></ul>
 </div>
 
 <script>
@@ -106,9 +106,11 @@ for (i = 0; i < acc.length; i++) {
 	  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim 
              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
 	     velit esse cillum dolore eu fugiat nulla pariatur.</p>
+	  <p>&nbsp;</p>
 	  
+	  <div class="column side" style="background-color:#fff;"><button class="button button1" onclick="newQuote()">Next question</button></div>
 	  <i id = "quotes">What?</i></div>
-  <div class="column side" style="background-color:#fff;"><button class="button button1" onclick="newQuote()">Next question</button></div>
+ 
 </div>
 
 <!--MAIN END-->
