--- a/index2.html
+++ b/index2.html
@@ -71,9 +71,8 @@
    <li><a href="#">Would you rather</a></li></ul>
 </div>
 
-<button class="accordion">Section 2</button>
-<div class="panel">
-	<ul><li><a href="#">Nav</a></li></ul></div>
+<button class="accordion"><a href="#">Section 2</a></button>
+
 
 <button class="accordion">Section 3</button>
 <div class="panel">
