--- a/index2.html
+++ b/index2.html
@@ -106,11 +106,11 @@ for (i = 0; i < acc.length; i++) {
              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
 	     velit esse cillum dolore eu fugiat nulla pariatur.</p>
 	  <p>&nbsp;</p>
-	  <hr />
 	  
+	  
+	  
+	  <div class="column side" style="background-color:#fff;"><button class="button button1" onclick="newQuote()">Next question</button></div><br />
 	  <i id = "quotes">What?</i></div>
-	  <div class="column side" style="background-color:#fff;"><button class="button button1" onclick="newQuote()">Next question</button></div>
-	  
  
 </div>
 
