--- a/index2.html
+++ b/index2.html
@@ -109,8 +109,8 @@ for (i = 0; i < acc.length; i++) {
 	  
 	  
 	  
-	  <div class="column side" style="background-color:#fff;"><button class="button button1" onclick="newQuote()">Next question</button></div><br />
-	  <i id = "quotes">What?</i></div>
+	  <div class="column side" style="background-color:#fff;"><button class="button button1" onclick="newQuote()">Next question</button><br />
+	  <i id = "quotes">What?</i></div></div>
  
 </div>
 
