--- a/index2.html
+++ b/index2.html
@@ -108,9 +108,9 @@ for (i = 0; i < acc.length; i++) {
 	  <p>&nbsp;</p>
 	  
 	  
+	  <i id = "quotes">What?</i></div>
+	  <div class="column side" style="background-color:#fff;"><button class="button button1" onclick="newQuote()">Next question</button></div>
 	  
-	  <div class="column side" style="background-color:#fff;"><button class="button button1" onclick="newQuote()">Next question</button><br />
-	  <i id = "quotes">What?</i></div></div>
  
 </div>
 
