--- a/index2.html
+++ b/index2.html
@@ -27,7 +27,7 @@
 <nav class="menu">
 			
 	
-<button class="accordion">Questions</button>
+	<button class="accordion"><strong>Questions</strong></button>
 <div class="panel">
    <ul><li><a href="#">Dating</a></li>
    <li><a href="#">Conversation</a></li>
