--- a/index2.html
+++ b/index2.html
@@ -27,20 +27,18 @@
 <nav class="menu">
 			
 	
-	<button class="accordion"><strong>Questions</strong></button>
+<button class="accordion"><strong>Questions</strong></button>
 <div class="panel">
    <ul><li><a href="#">Dating</a></li>
    <li><a href="#">Conversation</a></li>
    <li><a href="#">Would you rather</a></li></ul>
 </div>
 
-<button class="accordion"><a href="#">Section 2</a></button>
+<button class="accordion"><a href="#"><strong>Section 2</strong></a></button>
 
 
-<button class="accordion">Section 3</button>
-<div class="panel">
-	<ul><li><a href="#">Nav</a></li></ul>
-</div>
+<button class="accordion"><a href="#"><strong>Section 3</strong></a></button>
+
 
 <script>
 var acc = document.getElementsByClassName("accordion");
