--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@ for (i = 0; i < acc.length; i++) {
   </div>
   <div class="column middle" style="background-color:#fff;">
 	  <h1>Header</h1>
+	  <p>Some text here about what the website is for, and how to use it.</p>
+	  
 	  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim 
              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
 	     velit esse cillum dolore eu fugiat nulla pariatur.</p>
 	  <p>&nbsp;</p>
 	  
-	  
-	  <i id = "quotes">What?</i></div>
-	  <div class="column side" style="background-color:#fff;"><button class="button button1" onclick="newQuote()">Next question</button></div>
+	
 	  
  
 </div>
