--- a/would-you-rather.html
+++ b/would-you-rather.html
@@ -31,7 +31,7 @@
 <div class="panel">
    <ul><li><a href="#">Dating</a></li>
    <li><a href="#">Conversation</a></li>
-   <li><a href="#">Would you rather</a></li></ul>
+   <li><a href="would-you-rather.html">Would you rather</a></li></ul>
 </div>
 
 <button class="accordion"><a href="#"><strong>Section 2</strong></a></button>
