--- a/would-you-rather.html
+++ b/would-you-rather.html
@@ -62,11 +62,8 @@ for (i = 0; i < acc.length; i++) {
   
   </div>
   <div class="column middle" style="background-color:#fff;">
-	  <h1>Header</h1>
-	  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim 
-             veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-	     velit esse cillum dolore eu fugiat nulla pariatur.</p>
-	  <p>&nbsp;</p>
+	  <h1>Would you rather</h1>
+	  
 	  
 	  
 	  <i id = "quotes">What?</i></div>
