--- a/would-you-rather.html
+++ b/would-you-rather.html
@@ -13,7 +13,7 @@
 <!--HEADER-->
 <div class="header">
  
-  <span id="logo"><img src="Luv2meetU-logo-300x286.png" width="175px" ></span>
+	<span id="logo"><a href="index.html"><img src="Luv2meetU-logo-300x286.png" width="175px" ></a></span>
 </div>
 <!--HEADER END-->
         
