--- a/would-you-rather.html
+++ b/would-you-rather.html
@@ -22,7 +22,11 @@
 
 <div class="row">
   <div class="column side" style="background-color:#aaa;">
-    
+   
+<p>
+	These types of questions are great for critical thinking skills because it makes you analyize two very engaging or not so engaging situations. 
+	They also promote practicing their listening and speaking skills while creating situations that they have to think on their feet.
+</p>	
 	
 <nav class="menu">
 			
