--- a/would-you-rather.html
+++ b/would-you-rather.html
@@ -65,14 +65,22 @@ for (i = 0; i < acc.length; i++) {
   <div class="column middle" style="background-color:#fff;">
 	  <h1>Would you rather</h1>
 
-<p>
+	  
+	  
+	  
+	  <i id = "quotes">What?</i>
+	  
+	  <button class="button button1" onclick="newQuote()">Next question</button>
+	  
+	  </div>
+	  <div class="column side" style="background-color:#fff;">
+	  
+		  
+		  <p>
 	These types of questions are great for critical thinking skills because it makes you analyize two very engaging or not so engaging situations. 
 	They also promote practicing their listening and speaking skills while creating situations that they have to think on their feet.
-</p>	  
-	  
-	  
-	  <i id = "quotes">What?</i></div>
-	  <div class="column side" style="background-color:#fff;"><button class="button button1" onclick="newQuote()">Next question</button></div>
+</p>
+	  </div>
 	  
  
 </div>
