--- a/would-you-rather.html
+++ b/would-you-rather.html
@@ -68,9 +68,9 @@ for (i = 0; i < acc.length; i++) {
 	  
 	  
 	  
-	  <i id = "quotes">What?</i>
+	  <div>  <i id = "quotes">What?</i> </div>
 	  
-	  <button class="button button1" onclick="newQuote()">Next question</button>
+	  <div> <button class="button button1" onclick="newQuote()">Next question</button> </div>
 	  
 	  </div>
 	  <div class="column side" style="background-color:#fff;">
