--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
    <li><a href="would-you-rather.html">Would you rather</a></li></ul>
 </div>
 
-<button class="accordion"><a href="#"><strong>Section 2</strong></a></button>
+<button class="accordion"><a href="tips.html"><strong>Top tips</strong></a></button>
 
 
-<button class="accordion"><a href="#"><strong>Section 3</strong></a></button>
+<button class="accordion"><a href="useful.html"><strong>Useful numbers</strong></a></button>
 
 
 <script>
