--- a/would-you-rather.html
+++ b/would-you-rather.html
@@ -28,8 +28,8 @@
    <li><a href="#">Conversation</a></li>
    <li><a href="would-you-rather.html">Would you rather</a></li></ul>
 	</div>
-<button class="accordion"><a href="#"><strong>Section 2</strong></a></button>
-<button class="accordion"><a href="#"><strong>Section 3</strong></a></button>
+<button class="accordion"><a href="tips.html"><strong>Top tips</strong></a></button>
+<button class="accordion"><a href="useful.html"><strong>Useful numbers</strong></a></button>
 
 <script>
 var acc = document.getElementsByClassName("accordion");
