--- a/would-you-rather.html
+++ b/would-you-rather.html
@@ -57,8 +57,12 @@ for (i = 0; i < acc.length; i++) {
 <button class="button button1" onclick="newQuote()">Next question</button> 
 	</div>
 	
+		<p>
+These types of questions are great for critical thinking skills because it makes you analyize two very engaging or not so engaging situations. 
+They also promote practicing their listening and speaking skills while creating situations that they have to think on their feet.
+</p>
 <!-- RIGHT SIDEBAR-->
-	<div class="column side" style="background-color:#fff;">
+<!--	<div class="column side" style="background-color:#fff;">
 <p>
 These types of questions are great for critical thinking skills because it makes you analyize two very engaging or not so engaging situations. 
 They also promote practicing their listening and speaking skills while creating situations that they have to think on their feet.
@@ -67,7 +71,7 @@ They also promote practicing their listening and speaking skills while creating 
 
 	  
  
-</div>
+</div>-->
 
 <!--MAIN END-->
         
