--- a/would-you-rather.html
+++ b/would-you-rather.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>    
-        <title>Avoid the akward silence</title>
+        <title>Would you rather</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
        </head>
