--- a/would-you-rather.html
+++ b/would-you-rather.html
@@ -53,8 +53,8 @@ for (i = 0; i < acc.length; i++) {
 	
 	<div class="column middle" style="background-color:#fff;">
 <h1>Would you rather</h1>
-<i id = "quotes">What?</i> 
-<button class="button button1" onclick="newQuote()">Next question</button> 
+<p><i id = "quotes">What?</i> 
+	<button class="button button1" onclick="newQuote()">Next question</button> </p>
 		
 		<p>
 These types of questions are great for critical thinking skills because it makes you analyize two very engaging or not so engaging situations. 
