--- a/tips.html
+++ b/tips.html
@@ -20,10 +20,10 @@
 <!--MAIN-->
 
 <div class="row">
-  <div class="col-3 col-s-3 menu">
+  <div class="col-3 col-s-3 menu"  style="background-color:#aaa;">
     
 	
-<nav class="menu">
+<!--<nav class="menu">-->
 			
 	
 <button class="accordion"><strong>Questions</strong></button>
