--- a/tips.html
+++ b/tips.html
@@ -23,7 +23,7 @@
   <div class="col-3 col-s-3 menu"  style="background-color:#aaa;">
     
 	
-<!--<nav class="menu">-->
+<nav class="menu">
 			
 	
 <button class="accordion"><strong>Questions</strong></button>
