--- a/tips.html
+++ b/tips.html
@@ -18,7 +18,7 @@
 <!--HEADER END-->
 
 <div class="row">
-  <div class="col-3 col-s-3 menu">
+  <div class="col-3 col-s-3 menu" style="background-color: #aaa;">
 
 
 
