--- a/would-you-rather2.html
+++ b/would-you-rather2.html
@@ -71,7 +71,29 @@ li a:hover {
   color: white;
 }
 
-/*Acordian*/
+/*Button*/
+.button {
+  background-color: #004de6; 
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 10px;
+}
+
+.button1 {border-radius: 6px; clear: left; float: left;}
+	
+/*Button END*/
+
+#quotes {margin: 10px; padding-bottom: 20px; float: left;}
+
+#qbox {padding: 15px 32px; border-radius: 16px; background-color: #aaa;}
+	
+	
+/*Accordian*/
 .accordion {
   background-color: #aaa;
   color: #000;
@@ -123,6 +145,8 @@ a:hover {
   text-decoration: none;
   color: black;
 }
+	
+/*Accordian END*/
 </style>
 <body onload="newQuote()">
 
