--- a/would-you-rather2.html
+++ b/would-you-rather2.html
@@ -84,7 +84,7 @@ li a:hover {
   margin: 10px;
 }
 
-.button1 {border-radius: 6px; clear: left; float: left;}
+.button1 {border-radius: 6px; clear: both; float: left;}
 	
 /*Button END*/
 
