--- a/would-you-rather2.html
+++ b/would-you-rather2.html
@@ -88,9 +88,9 @@ li a:hover {
 	
 /*Button END*/
 
-#quotes {margin: 10px; padding-bottom: 20px; float: left;}
+#quotes {margin: 10px; padding-bottom: 20px; float: left; border-radius: 16px; background-color: #aaa;}
 
-#qbox {padding: 15px 32px; border-radius: 16px; background-color: #aaa;}
+/* #qbox {padding: 15px 32px; border-radius: 16px; background-color: #aaa;} */
 	
 	
 /*Accordian*/
