--- a/would-you-rather2.html
+++ b/would-you-rather2.html
@@ -84,11 +84,11 @@ li a:hover {
   margin: 10px;
 }
 
-.button1 {border-radius: 6px; clear: both; float: left;}
+.button1 {border-radius: 6px; clear: both; float: center;}
 	
 /*Button END*/
 
-#quotes {margin: 10px; padding-bottom: 20px; float: left; border-radius: 16px; background-color: #aaa;}
+#quotes {margin: 10px; padding-bottom: 20px; float: left;}
 
 /* #qbox {padding: 15px 32px; border-radius: 16px; background-color: #aaa;} */
 	
