--- a/would-you-rather2.html
+++ b/would-you-rather2.html
@@ -88,7 +88,7 @@ li a:hover {
 	
 /*Button END*/
 
-#quotes {margin: 10px; padding-bottom: 20px; float: left;}
+#quotes {margin: 0px; padding-bottom: 20px; float: left; border: 1px red solid; clear: both;}
 
 /* #qbox {padding: 15px 32px; border-radius: 16px; background-color: #aaa;} */
 	
