--- a/would-you-rather2.html
+++ b/would-you-rather2.html
@@ -79,7 +79,7 @@ li a:hover {
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
+  display: block;
   font-size: 16px;
   margin: 10px;
 }
