--- a/would-you-rather2.html
+++ b/would-you-rather2.html
@@ -81,14 +81,14 @@ li a:hover {
   text-decoration: none;
   display: block;
   font-size: 16px;
-  margin: 10px;
+  margin: 0px;
 }
 
-.button1 {border-radius: 6px; clear: both; float: center;}
+.button1 {border-radius: 6px;}
 	
 /*Button END*/
 
-#quotes {margin: 0px; padding-bottom: 20px; float: left; border: 1px red solid; clear: both; display: block;}
+#quotes {margin: 0px; padding-bottom: 20px; float: left; clear: both; display: block;}
 
 /* #qbox {padding: 15px 32px; border-radius: 16px; background-color: #aaa;} */
 	
