--- a/would-you-rather2.html
+++ b/would-you-rather2.html
@@ -84,11 +84,11 @@ li a:hover {
   margin: 0px;
 }
 
-.button1 {border-radius: 6px;}
+.button1 {border-radius: 6px; display: block;}
 	
 /*Button END*/
 
-#quotes {margin: 0px; padding-bottom: 20px; float: left; clear: both; display: block;}
+#quotes {margin: 0px; padding-bottom: 20px; display: block;}
 
 /* #qbox {padding: 15px 32px; border-radius: 16px; background-color: #aaa;} */
 	
