--- a/would-you-rather.html
+++ b/would-you-rather.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Top tips</title>
+<title>Luv 2 meet U - Would you rather?</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <body onload="newQuote()">
