--- a/tips.html
+++ b/tips.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
 <html>
-    <head>    
-        <title>Top tips</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="l2mu-style.css">
-       </head>
-  <body>
+<title>Luv 2 meet U - Top tips</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!--HEADER-->
-<div class="header">
- <span id="logo"><a href="index.html"><img src="Luv2meetU-logo-300x286.png" width="175px" ></a></span>
-</div>
-<!--HEADER END-->
+<body>
 
-<div class="row">
-  <div class="col-3 col-s-3 menu" style="background-color: #aaa;">
 
-<button class="accordion"><strong>Questions</strong></button>
-	<div class="panel">
+<div class="container">
+  
+  <div class="Header">
+  <span id="logo"><a href="index.html"><img src="Luv2meetU-logo-300x286.png" width="175px" ></a></span>
+  </div>
+  
+  <div class="Nav">
+
+
+
+<button class="accordion">Questions</button>
+<div class="panel">
    <ul><li><a href="#">Dating</a></li>
    <li><a href="#">Conversation</a></li>
    <li><a href="would-you-rather.html">Would you rather</a></li></ul>
-	</div>
-<button class="accordion"><a href="tips.html"><strong>Top tips</strong></a></button>
-<button class="accordion"><a href="useful.html"><strong>Useful numbers</strong></a></button>
+</div>
+<button class="accordion"><a href="tips.html">Top tips</a></button>
 
-<script>
+<button class="accordion"><a href="useful.html">Useful numbers</a></button>
+
+
+  </div>
+  <script>
 var acc = document.getElementsByClassName("accordion");
 var i;
 
@@ -41,24 +44,14 @@ for (i = 0; i < acc.length; i++) {
   });
 }
 </script>
-
- </div>
-
-<div class="col-6 col-s-9"  style="background-color: #fff;">
-<h1>Top tips</h1>
-
-<p>These types of questions are great for critical thinking skills because it makes you analyize two very engaging or not so engaging situations. 
-They also promote practicing their listening and speaking skills while creating situations that they have to think on their feet.</p>
-  </div>
-
   
+  <div class="Main">
+  <h1>Top tips</h1>
+
+
+  </div>
+  <div class="Footer"><p>&copy;7HD 2021</p></div>
 </div>
 
-<!--FOOTER-->
-<div class="footer">
-  <p>&copy;7HD 2021</p>
-</div>
-<!--FOOTER END-->
-     
 </body>
 </html>
