--- a/would-you-rather.html
+++ b/would-you-rather.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
+<head>
 <title>Luv 2 meet U - Would you rather?</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
+<link rel="stylesheet" href="l2mu-style.css">
+</head>
 <body onload="newQuote()">
 
 
