--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Luv 2 meet U - Would you rather?</title>
+<title>Luv 2 meet U - Conversation kickstarter</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="l2mu-style.css">
 </head>
