--- a/useful.html
+++ b/useful.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Luv 2 meet U - Useful information</title>
+<title>Luv 2 meet U - Useful numbers</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="l2mu-style.css">
 </head>
@@ -48,7 +48,7 @@ for (i = 0; i < acc.length; i++) {
 </script>
   
   <div class="Main">
-  <h1>Useful information</h1>
+  <h1>Useful numbers</h1>
 <p>Some text here about what the website is for, and how to use it.</p>
 <p>
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
