--- a/tips.html
+++ b/tips.html
@@ -48,8 +48,13 @@ for (i = 0; i < acc.length; i++) {
 </script>
   
   <div class="Main">
-  <h1>Top tips</h1>
+  <h1>Some dating tips to think about</h1>
 
+    <p>By smiling at your date, it shows that you are happy to be with them. If you are sat at a table together, it's good to face them to show that you are 
+      interested in talking to them.</p>
+    
+    <p>You may want to give your date a hug when you first see them and they might want to hug you too. However, not everybody likes to be hugged on a first date.
+      It might be a good idea to ask your date if they would like a hug before doing so, and if they say no, this is absolutely fine.</p>
 
   </div>
   <div class="Footer"><p>&copy;7HD 2021</p></div>
