--- a/tips.html
+++ b/tips.html
@@ -56,7 +56,7 @@ for (i = 0; i < acc.length; i++) {
     <p>You may want to give your date a hug when you first see them and they might want to hug you too. However, not everybody likes to be hugged on a first date.
       It might be a good idea to ask your date if they would like a hug before doing so, and if they say no, this is absolutely fine.</p>
     
-    <p>Ask your date <a href="questions.html">questions</a> to get to know them, but also to make sure that you talk about what your likes and dislikes are too, so 
+    <p>Ask your date <span style="text-decoration: underline;"><a href="questions.html">questions</a></span> to get to know them, but also to make sure that you talk about what your likes and dislikes are too, so 
       that you can both get to know each other.</p>
 
   </div>
