--- a/tips.html
+++ b/tips.html
@@ -18,7 +18,7 @@
 
 
 
-<button class="accordion">Questions</button>
+    <button class="accordion"><a href="#">Questions</a></button>
 <div class="panel">
    <ul><li><a href="#">Dating</a></li>
    <li><a href="#">Conversation</a></li>
