--- a/questions.html
+++ b/questions.html
@@ -49,9 +49,9 @@ for (i = 0; i < acc.length; i++) {
   
   <div class="Main">
   <h1>Great things to say or do</h1>
-<p>Some text here about dating questions</p>
-<p>Some text here about general conversation questions</p>
-<p>Some text here about 'would you rather' questions</p>
+<p>Some text here about <span style="text-decoration: underline;"><a href="dating.html">dating questions</a></span>.</p>
+<p>Some text here about <span style="text-decoration: underline;"><a href="conversation.html">general conversation questions</a></span>.</p>
+<p>Some text here about <span style="text-decoration: underline;"><a href="would-you-rather.html">'would you rather' questions</a></span>.</p>
   </div>
   <div class="Footer"><p>&copy;7HD 2021</p></div>
 </div>
