--- a/tips.html
+++ b/tips.html
@@ -56,8 +56,11 @@ for (i = 0; i < acc.length; i++) {
     <p>You may want to give your date a hug when you first see them and they might want to hug you too. However, not everybody likes to be hugged on a first date.
       It might be a good idea to ask your date if they would like a hug before doing so, and if they say no, this is absolutely fine.</p>
     
-    <p>Ask your date <span style="text-decoration: underline;"><a href="questions.html">questions</a></span> to get to know them, but also to make sure that you talk about what your likes and dislikes are too, so 
-      that you can both get to know each other.</p>
+    <p>Ask your date <span style="text-decoration: underline;"><a href="questions.html">questions</a></span> to get to know them, but also to make sure that you talk 
+      about what your likes and dislikes are too, so that you can both get to know each other.</p>
+    
+    <p>Remember that if you don't think that you have romantic feelings for your date then this is absolutely fine. It is very normal to go on a first date but feel 
+      like you don't want to have a relationship with this person. Many people go on lots of first dates before finding a relationship.</p>
 
   </div>
   <div class="Footer"><p>&copy;7HD 2021</p></div>
