--- a/tips.html
+++ b/tips.html
@@ -28,7 +28,7 @@
 
 <button class="accordion"><a href="useful.html">Useful numbers</a></button>
 
-  <button class="active"><a href="useful.html">Useful numbers</a></button>  
+  <p><a href="useful.html">Useful numbers</a></p>  
 
   </div>
   <script>
