--- a/tips.html
+++ b/tips.html
@@ -24,8 +24,8 @@
    <li><a href="#">Conversation</a></li>
    <li><a href="would-you-rather.html">Would you rather</a></li></ul>
 </div>
-<p><a href="tips.html">Top tips</a></p>
-<p><a href="useful.html">Useful numbers</a></p>  
+<button class="accordion"><a href="tips.html">Top tips</a></button>
+<button class="accordion"><a href="useful.html">Useful numbers</a></button>  
 
   </div>
   <script>
