--- a/questions.html
+++ b/questions.html
@@ -16,7 +16,7 @@
   
   <div class="Nav">
 
-
+<button class="accordion"><a href="index.html">Home</a></button>
 
 <button class="accordion">Questions</button>
 <div class="panel">
