--- a/questions.html
+++ b/questions.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Luv 2 meet U - Useful numbers</title>
+<title>Luv 2 meet U - types of questions</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="l2mu-style.css">
 </head>
