--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@ for (i = 0; i < acc.length; i++) {
   <h1>Home</h1>
 <p>Some text here about what the website is for, and how to use it.</p>
 <p>
+<img class="imgleft" src="https://via.placeholder.com/100" alt="image placeholder">
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
 	exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu 
 	fugiat nulla pariatur.
