--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="l2mu-style.css">
 </head>
-<body>
+<body  onload="newQuote()">
 
 
 <div class="container">
@@ -66,9 +66,13 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 	exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu 
 	fugiat nulla pariatur.
 </p>
+	  
+	
+<h2><i id = "inspire">Smile</h2>
+	  
   </div>
   <div class="Footer"><p>&copy;7HD 2021</p></div>
 </div>
-
+<script src="inspire.js"></script>
 </body>
 </html>
