--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 </p>
 	  
 	
-<h2><i id = "inspire">&nbsp;</h2>
+<!--<h2><i id = "inspire">&nbsp;</h2>-->
 	  
   </div>
   <div class="Footer"><p>&copy;7HD 2021</p></div>
