--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 	fugiat nulla pariatur.
 </p>
 	  
+
 	
-<!--<h2><i id = "inspire">&nbsp;</h2>-->
+	  <div><h2><i id = "inspire">&nbsp;</h2></div>
 	  
   </div>
   <div class="Footer"><p>&copy;7HD 2021</p></div>
